--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -155,7 +155,7 @@ Abbildung \ref{fig:siliconprofile} stellt die räumliche Verteilung der Unebenhe
 Breitere Eindellungen haben sich durch die geringe Größe des Simulationsraumes nicht entwickelt, jedoch wäre eine Untersuchung einer ca. \SI{500x500}{\angstrom} breiten Struktur in dieser Hinsicht interessant.
 Anhand des Profiles lässt sich auch erkennen, dass mitunter längere Relaxierungszeiten oder höhere Teilchenenergien notwendig wären, um Porenbildung weiter zu verringern und langreichweitigere Unebenheiten zu befördern, wie sie etwa bei der Bildung nanoskopischer Silizium-Partikel gebildet würden.
 
-Zum Vergleich beinhaltet Abbildung \ref{fig:siliconunderrelaxedprofile} das Oberflächeprofil einer unterrelaxierten Oberfläche, wie sie während der Anpassung der Parsivald-Parameter entstanden sind.
+Zum Vergleich beinhaltet Abbildung \ref{fig:siliconunderrelaxedprofile} das Oberflächenprofil einer unterrelaxierten Oberfläche, wie sie während der Anpassung der Parsivald-Parameter entstanden sind.
 Es zeigen sich stärkere Unterschiede und steilere Hänge, die sich aus der hohen Porösität des Materiales ergeben.
 Somit ist zu erwarten, dass die Rauheit der Schicht mit stärkerer Relaxierung erwartungsgemäß weiter abnimmt.
 
@@ -164,7 +164,7 @@ Zur Charakterisierung der Kristalleigenschaften der abgeschiedenen Schicht wurde
 Damit ist die Schicht amorph mit einer durchschnittlichen Koordinatinoszahl von \num{4}, woraus sich entnehmen lässt, \todo{wirklich?}dass die chemischen Bindungen
 Die engen Spitzen an den charakteristischen Abständen des reinen Silizium-Kristalles werden durch das Substrat erzeugt, dass bei \SI{100}{\angstrom} Schichthöhe immerhin noch \SI{20}{\percent} der Struktur ausmacht, jedoch durch anfängliche Relaxierungen zum Teil seine Kristalleigenschaften verloren hat.
 
-Anders als bei Gold oder Kupfer mit Koordinationszahlen von 12, die durch metallische Bindungen dominiert werden, oder etwa bei Salzen, die von ionischen Bindungen bestimmt werden, dominieren in reinem Silizium kovalente Bindungen, so dass die mittleren Koordinationszahl von \num{3.99} anzeigt, dass alle 4 möglichen Bindungen der Siliziumatome tatsächlich ausgeprägt sind.
+Anders als bei Gold oder Kupfer, bei denen metallische Bindungen dominieren, oder etwa bei Salzen, die von ionischen Bindungen bestimmt werden, überwiegen in reinem Silizium \todo{wirklich?}kovalente Bindungen, so dass die mittleren Koordinationszahl von \num{3.99} anzeigt, dass alle 4 möglichen Bindungen der Siliziumatome tatsächlich ausgeprägt sind.
 Somit zeigt sich die ReaxFF-Formulierung erfolgreich in der Darstellung der chemischen Eigenschaften von Silizium.
 
 \begin{figure}[H]
